@@ -220,7 +220,7 @@ properties files, where the rest of the team can see it (see
 | Property | Default | Effect |
 |---|---|---|
 | `vaadin.dev.mainClass` | discovered | the class to launch (see `MainClass`) |
-| `vaadin.dev.runtime` | discovered | how the app is started: `main`, `jetty-ee10`, `jetty-ee11` (see `AppRuntime`) |
+| `vaadin.dev.runtime` | discovered | how the app is started: `main`, `jetty-ee10`, `jetty-ee11`, `wildfly`, `tomee`, `payara`, `payara-micro`, `liberty`, `cargo` (see `AppRuntime`) |
 | `vaadin.dev.reactorRoot` | discovered | when the reactor root is not an ancestor of the application |
 | `vaadin.dev.modules` | auto | the edit loop by hand; `.` for the application alone |
 | `vaadin.dev.frontend` | discovered | the frontend folder, when it is neither what the build recorded nor a conventional location (see `Frontend`) |
@@ -235,14 +235,19 @@ properties files, where the rest of the team can see it (see
 
 ## How the application is started
 
-`AppRuntime` decides which of two shapes this project is.
+`AppRuntime` decides which of two shapes this project is, and for a WAR
+which of the containers in `ServerPlugin.KNOWN` its build runs.
 
 **An entry point** — a Spring Boot class, or any `public static void main` — is
 launched directly as `java -cp <classpath> <MainClass>` (`MainClassRuntime`).
 
 **A WAR** has no entry point, and its servlet container is a build plugin rather
 than a dependency, so only the build knows how to start it. `MavenGoalRuntime`
-asks it to:
+asks it to. Jetty runs the application in the build's own JVM; WildFly, TomEE,
+both Payaras, Liberty and Cargo cannot, and the section after this one is about
+the difference.
+
+### A container that runs in the build's JVM
 
 ```
 MAVEN_OPTS=<agents, opens, -XX:+AllowEnhancedClassRedefinition, -DdisabledPlugins>
@@ -273,6 +278,357 @@ a server plugin from `ServerPlugin.KNOWN`; then any `public static void main`.
 The order matters both ways - a Spring Boot app can be packaged as a WAR, and a
 WAR can carry an unrelated main method. Another container later is an entry in
 that table.
+
+### A container that forks
+
+WildFly, TomEE, both Payaras, Liberty and Cargo have no embedded mode:
+`wildfly:run`, `tomee:run`, `payara-server:start`, `payara-micro:start`,
+`liberty:run` and `cargo:run` each provision a server and start it as a
+**process of its own**.
+Nothing on Maven's command line, and nothing in its environment, reaches a JVM
+that Maven forked, so the agents, the JVM flags and the settings the application
+reads all travel together in the one parameter each plugin hands on to that
+process:
+
+```
+JAVA_HOME=<the JDK Jvm chose>
+  mvnw -B -ntp -nsu [-f <root>/pom.xml -pl :<app> -am] -Dmaven.test.skip=true
+       org.wildfly.plugins:wildfly-maven-plugin:<version>:run
+       -Dwildfly.javaOpts="<agents, opens, -XX:...> <settings the app reads>"
+```
+
+Every one of them deploys the packaged WAR rather than the module's own
+output, so one has to exist. WildFly's goal declares `@Execute(phase = PACKAGE)`
+and forks the packaging itself, which is why the command above names no phase,
+and Liberty's runs `war:war` itself for the same effect; TomEE's, Cargo's and
+both Payaras' fork nothing, so `package` goes on their command line instead —
+and naming it for the other two would only build the WAR twice.
+
+That last holds for a single-module project alone. A goal's fork runs the
+lifecycle of the **application's own module**, so a sibling module stops at
+whatever phase the command line names — and `compile`, which is all an embedded
+container needs, leaves it with no jar. Maven then substitutes its
+`target/classes` directory for the dependency and `maven-war-plugin` writes that
+directory into `WEB-INF/lib` under the jar's name — a zero-length
+`…-shared.jar/` entry in the WAR, and a `ClassNotFoundException` for every class
+in the sibling. So a forked container names `package` across the reactor whether
+or not its own goal forks one, and pays for it with one extra `war:war` on the
+application's module.
+
+The parameter is
+`wildfly.javaOpts`
+for WildFly, whose mojo splits the value on whitespace, and `tomee-plugin.args`
+for TomEE, which parses it the way a shell would — `javaagents` would read
+better and carries no user property, so no command line can set it. WildFly's
+`javaHome` defaults to `${java.home}`, so the server runs on the JVM Maven runs
+on and the JBR carries over unasked; Cargo's `cargo.java.home` defaults the same
+way.
+
+**TomEE's goal is never named on the command line**, and it is the only one
+that is not.
+
+A goal named on a command line runs in *every* project in the reactor. `-pl`
+chooses which projects are in the reactor — and `-am` is what puts the sibling
+library there, which the loop needs — but neither chooses which of them the goal
+runs in, and no command line can. Measured on the three-module fixture,
+`mvn -pl :app -am package tomee:run` ran the goal on the reactor **root** first:
+
+```
+[INFO] Building Flow dev loop tests: Apache TomEE          [1/3]
+[INFO] --------------------------------[ pom ]--------------------------------
+[INFO] --- tomee:10.1.2:run (default-cli) @ flow-test-devloop-tomee ---
+[INFO] Waiting for command: [quit, exit, reload]
+```
+
+`AbstractTomEEMojo.execute` never looks at packaging: it unzipped a TomEE under
+the root's `target/`, started it and blocked. Modules 2 and 3 were never built,
+nothing was deployed — and nothing *failed*, so the daemon waits out its whole
+start window and abandons a launch that was never going to happen. A
+single-module project never shows this: there, "every project" is the app.
+
+Every other entry survives being named. Jetty's mojo supports `war` packaging
+alone; Liberty's picks the farthest downstream project out of the session
+itself; Cargo's, WildFly's and both Payaras' are switched off across the reactor
+by a `skip` user property and forced back on for the application's module. That
+last needs a `skip` to invert, and `tomee:run` has none — `skipCurrentProject`
+is the only parameter that sounds like one and it guards `copyWar` alone, which
+would leave the root's TomEE running and merely emptier.
+
+What a command line cannot say, a model can: **a goal bound to a phase runs only
+where the model carries it.** So the daemon names `package` and no goal, and
+passes `-Dvaadin.devloop.ext.bind=package:run`; `DevLoopBuildExtension` adds the
+execution to the plugin in the application's module alone.
+`ServerPlugin.boundInTheApplication` marks the entry. Measured on the same
+fixture, in the app module and in no other:
+
+```
+[INFO] --- war:3.5.1:war (default-war) @ flow-test-devloop-tomee-app ---
+[INFO] --- tomee:10.1.2:run (vaadin-devloop-run) @ flow-test-devloop-tomee-app ---
+```
+
+That order is not luck: within a phase Maven runs executions in the order their
+plugins appear in the effective model and merges the lifecycle-injected ones in
+first, so `war:war` is already ahead of an execution added to a pom-declared
+plugin.
+
+Binding is not the answer for the rest of the table: `wildfly:run` declares
+`@Execute(phase = PACKAGE)` and would fork the phase it was bound to.
+`tomee:run` forks nothing, which is why `package` is on its command line at all.
+
+Without the extension — a daemon running from an exploded build directory — there
+is no goal in the build, so this is the one case the daemon **refuses** rather
+than degrades: in a reactor it says so and stops. A single-module project has no
+other module to run in, so there the goal is named as before.
+
+### Apache Tomcat, through Cargo
+
+Tomcat has no Maven plugin of its own a Vaadin project could use: Apache's
+`tomcat7-maven-plugin` was last released in 2013 and runs a `javax.servlet`
+container, which a Jakarta EE application cannot be deployed to at all. What the
+ecosystem uses instead — this repository's own `flow-tests/servlet-containers`
+included — is Codehaus Cargo, so the table entry is named `cargo` after the
+plugin rather than after Tomcat, and it covers every other container Cargo
+drives as well.
+
+Cargo forks like the other two, but its flags cannot travel the same way. Every
+parameter of `cargo:run` that could carry them — `<container>`,
+`<configuration>` — is a nested element with no user property behind it, so no
+`-D` reaches one. What Cargo *does* read is any **Maven project property** named
+`cargo.*`, which it injects as a container configuration property, after the
+pom's own `<properties>`. So the daemon asks the build extension to put one on
+the model:
+
+```
+  mvnw ... -Dmaven.ext.class.path=<daemon jar>
+       -Dvaadin.devloop.ext.module=<the application module's artifactId>
+       -Dvaadin.devloop.ext.property.cargo.jvmargs="<agents, -XX:...> <settings>"
+       package org.codehaus.cargo:cargo-maven3-plugin:<version>:run
+```
+
+`cargo.jvmargs` and not `cargo.start.jvmargs`, which is what this said until a
+container that is not Tomcat was tried. Cargo appends both to the command line
+of the JVM it launches, and for Tomcat that JVM *is* the container, so either
+name works and the start-only one leaves a project's own heap settings alone.
+Cargo's GlassFish family is not that shape: there the JVM Cargo launches is the
+`asadmin` client and the server is a process asadmin starts in turn, so
+`AbstractGlassFishInstalledLocalContainer.startInternal` takes `cargo.jvmargs`
+away from asadmin on purpose (CARGO-1255) and the standalone configuration
+writes it into the domain's `domain.xml` as `<jvm-options>` instead.
+`cargo.start.jvmargs` gets no such treatment and reaches the asadmin client
+alone — so the agents were loaded into a command-line tool that exits, the
+application ran without them, and every apply restarted with nothing to say why.
+One name is correct for both families and this is it.
+
+What that costs is the thing the other name avoided: `cargo.jvmargs` is
+something a project may well have written for itself. So `DevLoopBuildExtension`
+**adds to** a project property it finds rather than replacing it, the loop's
+flags last — the same precedence `mavenOpts` applies to `MAVEN_OPTS`, and for
+the same reason. A heap size the pom asks for is honoured, and the agents cannot
+be switched off by one.
+
+The value needs no backslash escaping: Cargo parses it with its own copy of
+Ant's `translateCommandline`, where quotes group and a backslash is an ordinary
+character.
+
+The consequence is that this one runtime **needs** the extension rather than
+merely benefiting from it. A daemon running from an exploded build directory has
+no jar to point Maven at, so there is no channel at all and the server would
+start without the agents; `MavenGoalRuntime.warnings` says so rather than
+letting every apply quietly restart.
+
+Readiness is read off Cargo's own line, `<name> started on port [<port>]`, and
+not off the container's. That is what lets one entry answer for every container
+Cargo drives, and it still works for a project that sends the container's output
+to a file with `<container><output>`.
+
+### Payara, both of them
+
+Payara ships two runtimes and a project declares one or the other, so there are
+two entries: `payara` for `fish.payara.maven.plugins:payara-server-maven-plugin`
+and `payara-micro` for its `payara-micro-maven-plugin`. Both run the `start`
+goal, neither declares an `@Execute`, so both name `package` themselves, and
+both block on the forked process the way the loop needs.
+
+**Never the `dev` goal.** Both plugins' `DevMojo` forces `autoDeploy` on, and
+that is a watcher which re-invokes Maven and redeploys — the same competing
+rebuilder `jetty.scan` and TomEE's `reloadOnUpdate` are switched off for. Payara
+Server's `dev` also turns on `trimLog`, which rewrites every line the server
+logs and so every line readiness is read from, and `aiAgent`, which turns the
+process into a prompt reading standard input. `start` defaults all of them off;
+the table's `Competing` entries only hold a pom that asks for them back.
+
+Neither channel can be taken away by a pom, which is new — for WildFly and TomEE
+a `<javaOpts>` or `<args>` in the pom beats the command line and the daemon can
+only warn. Payara Server's `payara.javaCommandLineOptions` feeds a *second*
+field that the mojo appends to the pom's list, and Payara Micro's `exec.args` is
+read straight off the session's user properties, where a pom cannot reach at
+all.
+
+Two things about those channels are worth knowing before changing either.
+
+**Payara Server drops any option with no `=` in it.** The mojo makes a key and a
+value of each element at the first `=` and adds nothing when there is no value —
+silently. That would take `-XX:+AllowEnhancedClassRedefinition` with it, and
+with it enhanced class redefinition. It survives because the flags are handed
+over as *one* whitespace-separated value: the split at the first `=` and the
+`key=value` that rebuilds it are exact inverses, so the value round-trips byte
+for byte and the server's own `JavaUtils.parseParameters` tokenizes it back at
+the far end. The requirement is only that the value contain an `=` somewhere,
+which the loop's settings always do.
+
+**And Maven splits that same value on commas**, the parameter being declared
+`List<String>` — a bare comma split in Plexus's converter, with no escaping
+available. Combined with the rule above, a comma does not divide a flag, it
+deletes most of it: `-DdisabledPlugins=Vaadin,Spring,SpringBoot,Jetty` would
+arrive as `-DdisabledPlugins=Vaadin`. So `ServerPlugin.commaSplitFlags` marks
+that channel, and `MavenGoalRuntime` moves every comma-bearing flag into a JVM
+argument file under `target/devloop/payara-args.txt`, passing `@<file>` in its
+place — the JVM expands that itself, and an argument file quotes a comma without
+trouble. The flags that need no file stay inline, where the launch line shows
+them.
+
+Payara Micro has neither problem: `exec.args` is a plain string, split on
+whitespace and nothing else. It has no escaping either, so a Windows path passes
+through as it stands and one containing a space cannot be passed at all —
+`MavenGoalRuntime.unsplittable` says so. It is also **undocumented**: there is
+no constant behind it, the literal name is inline in the mojo, and a Payara
+release that dropped it would leave the server starting with no agents and every
+apply restarting. The launch line the daemon logs is where to look first.
+
+Readiness differs between the two, and not arbitrarily. Payara Micro logs the
+kernel's own `Network Listener http-listener started in: 49ms - bound to
+[/0.0.0.0:8080]`, which is one line and carries the port; the listener name is
+matched literally so an HTTPS one cannot answer for it, and the elapsed time is
+stepped over because `MessageFormat` groups it by locale. Payara Server's domain
+is started with no `--verbose`, so that line may go only to the domain's own
+`server.log` and never reach the daemon — readiness there is the *plugin's*
+line, `<name> application deployed successfully : http://host:port/ctx`, which
+is logged only after the admin endpoint has answered and the deployment has
+succeeded. That is a stronger signal than a bound socket, and it is the same
+reasoning Cargo's entry uses: read the plugin, not the container.
+
+One consequence for a test fixture, and it is why there is none: **Payara
+Server's HTTP port cannot be chosen from the command line.** `payara.http.port`
+only tells the plugin which port to talk to; the listener itself comes from the
+domain's `domain.xml`. Payara Micro's can — `-Dexec.args=-Dpayaramicro.port=<n>`
+— because Micro reads its own configuration from system properties.
+
+### Open Liberty
+
+`liberty:run` and never `liberty:dev`, whose file watcher redeploys on a
+schedule of its own. It forks — `embedded` defaults to `false` — and blocks on
+the server, which is the shape the loop needs. It declares no `@Execute` and
+still needs no phase, which no other entry manages: `RunServerMojo` runs
+`resources`, `compiler:compile` and `war:war` itself. And it is the one forked
+container that keeps itself to the application's own module unasked, reading the
+session's `ProjectDependencyGraph` to run the server on the farthest downstream
+project alone and skipping `pom` packaging outright — so none of the
+switch-the-goal-off-and-force-it-back machinery Cargo and both Payaras need
+appears here.
+
+```
+JAVA_HOME=<the JDK Jvm chose>
+  mvnw ... io.openliberty.tools:liberty-maven-plugin:<version>:run
+       -DlooseApplication=false        <only when there is no extension>
+       -Dliberty.jvm.devloop0=-javaagent:<hotswap-agent.jar>
+       -Dliberty.jvm.devloop1=-javaagent:<daemon jar>
+       -Dliberty.jvm.devloop2=-XX:+AllowEnhancedClassRedefinition
+       ...                    <one -D per flag, and per setting the app reads>
+```
+
+**The channel carries one flag per property**, which is the one thing the table
+did not already know how to say. Every Maven project *or system* property named
+`liberty.jvm.<key>` becomes one **line** of the server's generated
+`jvm.options`, and a line is one JVM argument — so the flags cannot be joined
+the way WildFly's and TomEE's are. `ServerPlugin.perPropertyFlags` marks that
+shape and `MavenGoalRuntime.flagProperties` answers it, keying each property by
+the flag's position. A line is taken whole, so a comma in one divides nothing
+and a backslash escapes nothing; the JVM argument file Payara Server needs is
+not reached here.
+
+What the key must *not* be relied on for is order. The plugin reads those
+properties out of a `Properties`, whose iteration order is unspecified, so the
+lines may be written in any order at all — which is a second and sharper reason
+for `MavenGoalRuntime.singleToken` to fold a module option onto its value,
+WildFly's sorting being only the first.
+
+**A pom cannot take the channel away**, which puts Liberty with the Payaras
+rather than with WildFly and TomEE: the generated file overwrites any
+`jvm.options` the project supplies, and `writeJvmOptions` appends a pom's own
+`<jvmOptions>` *after* the Maven properties rather than instead of them.
+
+**`looseApplication` is forced off, and that is the load-bearing setting.**
+Liberty's default deploys a loose-application XML pointing straight at
+`target/classes` — which would be the best hot-swap story of any WAR container
+except Jetty, were it not for Liberty's own `applicationMonitor`. That defaults
+to `updateTrigger="polled"`, so the server restarts the application whenever a
+class under `target/classes` changes: the competing rebuilder `jetty.scan` and
+TomEE's `reloadOnUpdate` are switched off for, except that this one cannot be
+switched off from the pom at all. It lives in the project's `server.xml`, where
+nothing in `ServerPlugin.Competing` can see it. A packaged WAR does not change
+between restarts, so the monitor has nothing to react to and the loop is in sole
+charge without the project having to write anything — at the cost every other
+forked container already carries, the section below this one.
+
+Both `looseApplication` and `embedded` are declared with no plugin prefix, and a
+`-D` is a Maven user property: such a name belongs to nobody and reaches every
+plugin in every module of the reactor. `${skip}` is read by `liberty:run` itself
+and by `dependency:tree`. So `MavenGoalRuntime.goalProperties` sends
+`looseApplication` only when there is no extension to write it into this
+module's configuration, and `embedded` is never sent at all — `false` is already
+its default, so the warning is the whole of what it needs. A pom that turned it
+on would run the server in Maven's own JVM, which reads no `jvm.options` at all.
+
+The skip is the one exception to that rule, because it cannot be anything else:
+it is switched on across the *whole* reactor and off again for one module, so
+the forced `<skip>false</skip>` is its other half rather than its replacement —
+and Payara Server's parameter is declared `${skip}` under no other name.
+
+Readiness is Liberty's `CWWKT0016I: Web application available (default_host):
+http://host:9080/ctx/`, logged once the application is installed and reachable —
+the same stronger-than-a-bound-socket signal Payara Server's entry reads. It is
+matched on the **message id and the URL**, with the words between them stepped
+over, and that is where this entry departs from WildFly's and TomEE's: Liberty
+ships translated message catalogues and logs in the JVM's own locale, so the
+text is not dependable while the id and the URL are. Requiring the `://` is also
+what keeps `CWWKF0011I`, the server-ready line that carries no port, from
+answering for it.
+
+The JVM is Maven's: the plugin passes `JAVA_HOME` to the server only for a Maven
+toolchain, and otherwise the process inherits the environment Maven was started
+with — where the daemon has already put the JBR `Jvm` chose.
+
+### What a deployed WAR costs a hot swap
+
+Every forked container deploys a *copy* of the WAR, and the webapp class
+loader reads that copy rather than the module's `target/classes`. A hot swap
+acts on classes already loaded, so it is unaffected — but a class the
+application has not loaded *yet* still loads its pre-edit bytes from the
+deployed copy, until the next restart rebuilds and redeploys the WAR. Measured
+against Tomcat: an `apply` on a view's service class reported
+`redefineClasses(0)` because the page had never been opened, and the value that
+then rendered was the deployed one. Once the page had been opened, the same edit
+hot-swapped in under a second and the new value rendered without a reload.
+Jetty never shows this, because there the webapp class loader *is*
+`target/classes`.
+
+Module options go in as `--add-opens=<module>/<package>=<target>`, one token
+rather than two. WildFly sorts module options apart from the rest before it
+builds the server's command line, and the two-token form comes apart in the
+sorting — measured, seven `--add-opens` arrived ahead of their seven values and
+the JVM refused to start at all. `MavenGoalRuntime.singleToken` folds them.
+
+Three consequences. The application is a **grandchild** of the daemon: stopping
+it is still reliable, because `AppProcess` ends a launch descendants-first, but
+its own exit code is lost — the code the daemon waits on is Maven's. A pom that
+pins `<javaOpts>` or `<args>` in `<configuration>` beats the command line and
+would silently drop the agents; that one the build extension cannot rewrite for
+you, because the value it would have to write is composed per launch, so the
+daemon warns about it instead. And the **first** `start` on a WildFly project
+provisions a server under `target/` before it can start one, and a Cargo project
+downloads and unpacks one, which is far slower than any boot — so
+`AppRuntime.startupTimeout` is a runtime's own to declare, and a forked container
+asks for twenty minutes where an embedded one gets five.
 
 ## Which JVM runs the app
 
@@ -480,6 +836,37 @@ the effective model in memory before any mojo runs; nothing is written to the
 project, and the override is announced in the app log. From an exploded build
 directory there is no jar to point Maven at, and it can only warn.
 
+A third shape needs the goal itself rather than its configuration, and that is
+`vaadin.devloop.ext.bind` — `<phase>:<goal>`, added as an execution with the id
+`vaadin-devloop-run`. See "A container that forks" above for why TomEE is the
+one entry that needs it. It is added to the plugin's executions rather than
+instead of them, and reused rather than added twice when the id is already
+there — Maven may read a model more than once, and two bound executions would be
+two servers on one port.
+
+**It is given a copy of the plugin's `<configuration>`, and that is not a
+convenience.** Maven merges a plugin-level configuration into each execution's
+while it is *building the model*; afterwards it consults the plugin-level one
+for a goal named on the command line alone
+(`DefaultLifecycleExecutionPlanCalculator` passes `allowPluginLevelConfig` only
+for `MojoExecution.Source.CLI`). An execution added after the model was built
+has missed the merge and would run on the mojo's defaults. Measured against the
+TomEE fixture: `<tomeeHttpPort>8892</tomeeHttpPort>` and `<context>ROOT</context>`
+were both in the effective model, and the server still came up on 8080 under the
+module's `finalName`. The copy is taken *after* the forcing, because the forced
+value has to be in it and because `apply` strips a forced element from every
+execution's configuration.
+
+The application's module is named alongside the plugin, in
+`vaadin.devloop.ext.module`, and the rewrite is applied there and nowhere else.
+The model the extension edits is the *effective* one, so a plugin a reactor
+parent declares belongs to every module that inherits it — and the entries that
+are switched off across the reactor and forced back on with `<skip>false</skip>`
+(Cargo, WildFly, both Payaras) would be switched back on in the reactor root as
+well, which is the failure the skip exists to prevent. It is the same
+`artifactId` that `-pl :<app>` selects; with no module named, nothing is
+rewritten and the extension says so.
+
 **The build's class loaders are in the application's JVM**, so a second copy of
 every class the Vaadin Maven plugin scans is live in it. That loader is kept
 out of HotswapAgent (`MavenGoalRuntime.extraJvmFlags`), and the connector
@@ -587,3 +974,36 @@ javac), `Frontend` in both frontend modes, `Jvm`, `HotswapAgentJar`,
 loop itself is tested in `flow-tests/test-devloop`: `test-devloop-spring` for
 an entry point and `test-devloop-jetty` for a WAR under its own build plugin,
 over the shared ITs in `test-devloop-support`.
+
+**WildFly, TomEE, both Payaras and Liberty have no fixture**, only the table's
+own unit tests. What those cannot answer is the one question that matters for a
+forked container — did the agents reach the server's JVM — so that is verified
+by hand against a WAR whose pom runs the plugin in question:
+
+```bash
+.vaadin/vaadin-dev start
+.vaadin/vaadin-dev status     # the runtime named here must be the intended one
+#   target/devloop/app.log holds the readiness line the entry's pattern expects,
+#   and the "flags:" line holds the whole value handed to the plugin - for
+#   payara, check target/devloop/payara-args.txt exists and holds the flags
+#   with commas in them, and for liberty, that
+#   target/liberty/wlp/usr/servers/defaultServer/jvm.options holds one line per
+#   flag with the agents among them
+#   edit a method body in a class the running page has already loaded, then:
+.vaadin/vaadin-dev apply
+#   expect: exit 0 and hot-reload, NOT "restarting". A restart here is the
+#   symptom of every way this can go wrong - the flags dropped, split on a
+#   comma, or sent to a JVM that was not the server's.
+```
+
+A structural edit — adding a method — escalating to a restart *on a JBR* is the
+particular symptom of `-XX:+AllowEnhancedClassRedefinition` having been dropped,
+which is the failure Payara's one-value trick and Liberty's one property per
+flag both exist to prevent.
+
+**Run that by hand against a reactor, not a single module.** Two of the things a
+forked container has to get right are invisible to a project with no sibling: a
+goal named on a command line runs on every module in the reactor, which is what
+the skip and the forced `<skip>false</skip>` are for — and, for TomEE, the bound
+execution — and a sibling left at `compile` reaches the WAR as an empty
+directory, which is what `package` across the reactor is for.
