@@ -15,10 +15,13 @@
  */
 package com.vaadin.flow.devloop.daemon;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -37,18 +40,25 @@ import com.vaadin.flow.devloop.mavenext.DevLoopBuildExtension;
  * than shipping a container of its own and guessing at the project's
  * configuration.
  * <p>
- * The plugin is run <em>in the build's own JVM</em> ({@code EMBED}), which is
- * what keeps the application a direct child of the daemon: a forked deploy mode
- * would make it a grandchild, and {@link AppProcess} exists because exit codes
- * are lost and kills orphan JVMs when that happens. Since the application JVM
- * is then Maven's JVM, the agents and the JVM flags travel in
- * {@code MAVEN_OPTS} and the JDK choice travels in {@code JAVA_HOME} - the
- * plugin's own {@code jvmArgs} parameter is no use here, because it only
- * applies to a fork.
+ * Jetty is run <em>in the build's own JVM</em> ({@code EMBED}), which is what
+ * keeps the application a direct child of the daemon. The application JVM is
+ * then Maven's JVM, so the agents and the JVM flags travel in
+ * {@code MAVEN_OPTS} and the JDK choice travels in {@code JAVA_HOME}.
+ * <p>
+ * WildFly, TomEE, both Payaras, Liberty and Cargo offer no such mode: each
+ * starts the server as a process of its own, so the application is a
+ * grandchild. Stopping one is still reliable, because {@link AppProcess} ends a
+ * launch descendants-first; what is lost is the application's own exit code,
+ * since the code the daemon waits on is Maven's. For those the agents, the JVM
+ * flags and the settings the application reads all travel in the plugin's own
+ * parameter - see {@link #forkedJvmFlags} - because neither Maven's command
+ * line nor its environment reaches a JVM that Maven forked.
  * <p>
  * For internal use only. May be renamed or removed in a future release.
  */
 final class MavenGoalRuntime implements AppRuntime {
+
+    private static final String WARNING = "WARNING: ";
 
     private final Launch launch;
     private final ServerPlugin plugin;
@@ -72,6 +82,23 @@ final class MavenGoalRuntime implements AppRuntime {
     public Invocation invocation(Launch.Project project, List<String> jvmFlags,
             List<String> systemProperties) throws IOException {
         Reactor reactor = launch.reactor();
+        if (plugin.boundInTheApplication() && !bound()
+                && reactor.isMultiModule()) {
+            // The one launch the daemon will not compose. Without the
+            // extension there is no way to bind the goal and naming it is all
+            // that is left - which for TomEE starts a server in the reactor
+            // root and blocks the build there, so the start would not fail but
+            // hang until the window ran out, and for Liberty deploys a WAR with
+            // every sibling module missing from it. A message costs less.
+            throw new IOException(plugin.artifactId() + " cannot be kept to "
+                    + reactor.app().artifactId() + " without the dev loop's "
+                    + "build extension, and this daemon is not running from a "
+                    + "jar so it has none: its " + plugin.goal() + " goal, "
+                    + "named on the command line, would run in every module "
+                    + "of " + reactor.root() + " rather than in the "
+                    + "application's alone. Please run the daemon from its "
+                    + "jar");
+        }
         List<String> command = new ArrayList<>();
         command.add(launch.mavenCommand().toString());
         // -nsu rather than -o: the run has to be able to fetch the plugin the
@@ -93,33 +120,394 @@ final class MavenGoalRuntime implements AppRuntime {
         // The run goal forks a lifecycle as far as test-compile, and the loop
         // has no use for test sources - or for their failing to compile.
         command.add("-Dmaven.test.skip=true");
-        if (reactor.isMultiModule()) {
-            command.add("compile");
+        // Jetty serves the module's own output, so there is nothing to build
+        // for it beyond the compile a multi-module reactor already needs. A
+        // container that deploys a packaged WAR needs that WAR to exist, and
+        // names the phase that makes one.
+        // An entry whose own goal forks the packaging names no phase, but that
+        // fork covers the application's module alone - a sibling stops at the
+        // phase named here. At `compile` it has no jar, and maven-war-plugin
+        // writes its target/classes directory into WEB-INF/lib under the jar's
+        // name: an empty entry, and the sibling's classes missing at runtime.
+        // So a forked container names `package` either way.
+        String phase = plugin.phase();
+        if (phase.isBlank() && reactor.isMultiModule()) {
+            phase = plugin.embedded() ? "compile" : "package";
         }
-        command.add(plugin.goalSpecification(declared));
-        plugin.goalProperties()
+        if (!phase.isBlank()) {
+            command.add(phase);
+        }
+        // An entry the extension binds names no goal: that is the whole point
+        // of binding it, a goal named here running in every module of the
+        // reactor and one bound to a phase only where the model carries it.
+        if (!bound()) {
+            command.add(plugin.goalSpecification(declared));
+        }
+        goalProperties()
                 .forEach((key, value) -> command.add("-D" + key + "=" + value));
-        // Read by the application long after Maven has started, so the command
-        // line is the right place for them - and the right place precisely
-        // because ProcessBuilder passes each one as its own argument, which
-        // MAVEN_OPTS cannot do for a value containing a space.
-        command.addAll(systemProperties);
+        if (plugin.embedded()) {
+            // Read by the application long after Maven has started, so the
+            // command line is the right place for them - and the right place
+            // precisely because ProcessBuilder passes each one as its own
+            // argument, which MAVEN_OPTS cannot do for a value containing a
+            // space.
+            command.addAll(systemProperties);
+        } else {
+            command.addAll(forkedJvmFlags(jvmFlags, systemProperties));
+        }
 
         writeHotswapAgentProperties(project);
 
         Map<String, String> environment = new LinkedHashMap<>();
-        environment.put("MAVEN_OPTS",
-                mavenOpts(System.getenv("MAVEN_OPTS"), jvmFlags));
+        // The inherited value is kept either way; the loop's own flags are
+        // added only when the application is going to run in this JVM. Adding
+        // them for a forked server would put the agents on Maven instead,
+        // where they would find no application and instrument nothing.
+        environment.put("MAVEN_OPTS", mavenOpts(System.getenv("MAVEN_OPTS"),
+                plugin.embedded() ? jvmFlags : List.of()));
         // The application JVM is Maven's JVM, so this is the only way the
         // JetBrains Runtime that Jvm chose is the one the application runs on -
         // and with it, enhanced class redefinition.
         environment.put("JAVA_HOME", launch.appJvm().home().toString());
+        // And first on the PATH, for the forked servers: a plugin that is given
+        // no java of its own runs the first one it finds there, whatever
+        // JAVA_HOME says. Payara Micro's does, and on Linux that was a JDK
+        // without enhanced class redefinition, which refused the loop's flags
+        // and never started. Windows hid it by looking in the directory of
+        // the process that spawns first, which is Maven's own JVM.
+        environment.put("PATH", pathWith(launch.appJvm().home().resolve("bin"),
+                System.getenv("PATH")));
         // The launcher derives maven.multiModuleProjectDirectory by walking up
         // from the working directory looking for .mvn, and the working
         // directory here is the application module rather than the reactor
         // root. Setting it explicitly takes that guess out of the picture.
         environment.put("MAVEN_BASEDIR", reactor.root().toString());
         return new Invocation(command, environment, false);
+    }
+
+    /**
+     * Whether this launch hands the goal to the build extension to bind rather
+     * than naming it on the command line.
+     * <p>
+     * Both halves have to hold: the entry has to be one that is bound - see
+     * {@link ServerPlugin#boundInTheApplication} for why TomEE's and Liberty's
+     * are - and there has to be an extension to bind it. Without the second,
+     * naming the goal is all that is left, and {@link #invocation} refuses the
+     * launch outright rather than name it across a reactor.
+     *
+     * @return {@code true} when the goal is bound rather than named
+     */
+    private boolean bound() {
+        return plugin.boundInTheApplication()
+                && !configurationOverride().isEmpty();
+    }
+
+    /**
+     * The {@code -D} settings that keep the plugin in the shape the loop needs.
+     * <p>
+     * The table's, except for the skip an entry sets across the whole reactor
+     * so that the extension can switch it back on for the application's own
+     * module alone - Cargo, WildFly and both Payaras. Sending the first half
+     * without the second would start nothing at all, which is worse than the
+     * degraded run {@link #warnings()} describes, so without an extension the
+     * skip is left out and the goal runs everywhere instead.
+     *
+     * @return the settings to pass
+     */
+    private Map<String, String> goalProperties() {
+        return goalProperties(plugin, !configurationOverride().isEmpty());
+    }
+
+    /**
+     * The same, as a function of the two things it depends on.
+     * <p>
+     * Without an extension, only the skip is dropped, and that is the point:
+     * the rest of the map is not about the reactor at all. Payara Micro's
+     * {@code payara.deploy.war=true} is what makes {@code start} deploy the
+     * application, {@code deployWar} defaulting to {@code false} - dropping the
+     * whole map with the skip brought up a Micro with nothing in it, on a
+     * single-module project too, where the skip was never needed.
+     * <p>
+     * With one, a setting whose name carries no plugin prefix is dropped when
+     * the extension forces the same element. A {@code -D} is a Maven user
+     * property, and a name like {@code looseApplication} belongs to nobody: it
+     * reaches every plugin in every module of the reactor, and {@code ${skip}}
+     * is read by {@code liberty:run} and by {@code maven-dependency-plugin} as
+     * well. A value the extension can write into the application module's own
+     * configuration does not need that reach.
+     * <p>
+     * The skip is the exception and has to be: it is switched on across the
+     * <em>whole</em> reactor and off again for one module, so the forced
+     * {@code <skip>false</skip>} is its other half rather than its replacement.
+     * Payara Server's is declared {@code ${skip}} and under no other name, so
+     * there the reach is the price of the mechanism.
+     *
+     * @param plugin
+     *            the entry being launched
+     * @param rewritten
+     *            whether the build extension is there to force the other half
+     * @return the settings to pass
+     */
+    static Map<String, String> goalProperties(ServerPlugin plugin,
+            boolean rewritten) {
+        Map<String, String> kept = new LinkedHashMap<>(plugin.goalProperties());
+        Optional<String> skip = plugin.skipProperty();
+        if (rewritten) {
+            kept.keySet()
+                    .removeIf(name -> !name.contains(".")
+                            && !skip.filter(name::equals).isPresent()
+                            && plugin.forced(name));
+        } else {
+            skip.ifPresent(kept::remove);
+        }
+        return Map.copyOf(kept);
+    }
+
+    /**
+     * Everything a forked server's JVM must start with, as {@code -D} settings.
+     * <p>
+     * Neither channel the embedded case uses reaches a forked server:
+     * {@code MAVEN_OPTS} starts Maven, and a {@code -D} on Maven's command line
+     * sets a property in Maven's JVM. So both the agents and the settings the
+     * application reads - the daemon's port and token among them - travel in
+     * the plugin's own parameter, which is the one thing a forked server hands
+     * on to the process it starts.
+     * <p>
+     * Joined with spaces and passed as one setting, because that is how most of
+     * those plugins take it: WildFly's {@code setJavaOpts} splits the value on
+     * whitespace, TomEE parses {@code args} the way a shell would, and Cargo
+     * runs its own copy of Ant's {@code translateCommandline} over it. Liberty
+     * is the exception - its channel carries one flag per property, so there
+     * the same flags go out as one setting each; see {@link #flagProperties}.
+     * Either way a value with a space in it is as unsplittable as in
+     * {@code MAVEN_OPTS}, a {@code jvm.options} line being split on whitespace
+     * too. The flags are already reported by {@code Launch}; the settings are
+     * not, and only reach this channel for a forked server, so they are checked
+     * here.
+     * <p>
+     * The name on the left of the {@code =} is the plugin's own parameter for a
+     * plugin that exposes one, and otherwise a request to the build extension
+     * to put that name on the project's model - see {@link #warnings()} for
+     * what happens when there is no extension to ask.
+     *
+     * @param jvmFlags
+     *            the flags the loop needs the application JVM to start with
+     * @param systemProperties
+     *            the {@code -D} settings the application reads
+     * @return the arguments carrying them, one for most channels
+     */
+    private List<String> forkedJvmFlags(List<String> jvmFlags,
+            List<String> systemProperties) throws IOException {
+        unsplittable(systemProperties, splitter(plugin)).forEach(log::line);
+        List<String> forked = new ArrayList<>(jvmFlags);
+        forked.addAll(systemProperties);
+        List<String> tokens = singleToken(forked);
+        if (plugin.commaSplitFlags()) {
+            tokens = withoutCommas(tokens);
+        }
+        if (plugin.shellEscapedFlags()) {
+            tokens = tokens.stream().map(MavenGoalRuntime::escapeBackslashes)
+                    .toList();
+        }
+        if (plugin.perPropertyFlags()) {
+            return flagProperties(flagsSetting(), tokens);
+        }
+        return List.of("-D" + flagsSetting() + "=" + String.join(" ", tokens));
+    }
+
+    /**
+     * One {@code -D} per flag, for a channel that carries a single flag in each
+     * property.
+     * <p>
+     * Liberty's shape, and the reason {@link #forkedJvmFlags} returns a list
+     * rather than one argument. Every Maven property named
+     * {@code liberty.jvm.<key>} becomes one line of the server's generated
+     * {@code jvm.options}, so the flags cannot be joined - a line holding all
+     * of them would reach the JVM as a single argument. The key only has to
+     * make the names distinct, so it is the flag's position, which also makes
+     * the launch line the daemon logs read in the order the flags were composed
+     * in.
+     * <p>
+     * The order they are <em>written</em> in is not this method's to decide:
+     * the plugin reads them out of a {@code Properties}, whose iteration order
+     * is unspecified. That is why {@link #singleToken} has already folded every
+     * module option onto its value by the time this is reached.
+     *
+     * @param prefix
+     *            the property name to append each flag's position to
+     * @param tokens
+     *            the flags, one per property
+     * @return the settings to pass, one per flag
+     */
+    static List<String> flagProperties(String prefix, List<String> tokens) {
+        List<String> settings = new ArrayList<>();
+        for (int index = 0; index < tokens.size(); index++) {
+            settings.add("-D" + prefix + index + "=" + tokens.get(index));
+        }
+        return settings;
+    }
+
+    /**
+     * What splits this plugin's channel, as a clause reading "and ...".
+     * <p>
+     * Naming {@code MAVEN_OPTS} would send a reader looking in the wrong place
+     * for a forked server, and so would naming the property for a channel that
+     * is not one value but a file the plugin writes from many.
+     *
+     * @param plugin
+     *            the plugin whose channel carries the flags
+     * @return the clause for {@link #unsplittable}
+     */
+    static String splitter(ServerPlugin plugin) {
+        if (plugin.perPropertyFlags()) {
+            return plugin.artifactId() + " writes " + plugin.jvmFlagsProperty()
+                    + "* into the server's jvm.options, whose lines its "
+                    + "launcher splits on whitespace";
+        }
+        return plugin.artifactId() + " splits " + plugin.jvmFlagsProperty()
+                + " on whitespace";
+    }
+
+    /**
+     * Moves every flag with a comma in it into a JVM argument file.
+     * <p>
+     * For a channel Maven splits on commas - a plugin parameter declared
+     * {@code List<String>}, which is Payara Server's shape - a comma does not
+     * merely divide the value. Maven's converter splits on it with no escaping
+     * available, and the plugin then makes a key and a value of each piece at
+     * its first {@code =} and <em>discards any piece that has none</em>. So
+     * {@code -DdisabledPlugins=Vaadin,Spring,SpringBoot,Jetty} would reach the
+     * server as {@code -DdisabledPlugins=Vaadin}, with three quarters of it
+     * gone and nothing logged. Measured against nothing yet - the mechanism is
+     * read out of Plexus's converter and the mojo, and that is exactly why it
+     * is worth writing down rather than discovering later as HotswapAgent's
+     * Vaadin plugin quietly competing with every apply.
+     * <p>
+     * A JVM argument file is the way out, and it costs the channel nothing: the
+     * JVM expands {@code @file} itself, so the plugin passes the token through
+     * as one more argument, and the file's own quoting carries a comma without
+     * further ado. Only the flags that need it go there, so the rest stay
+     * visible in the launch line the daemon logs.
+     * <p>
+     * Written per module beside everything else the daemon keeps under
+     * {@code target/devloop/}, and named after the runtime so two of them could
+     * never collide.
+     *
+     * @param tokens
+     *            the flags as they would have been passed inline
+     * @return the same flags, with the comma-bearing ones replaced by one
+     *         {@code @file} token
+     * @throws IOException
+     *             if the argument file cannot be written
+     */
+    private List<String> withoutCommas(List<String> tokens) throws IOException {
+        long affected = tokens.stream().filter(MavenGoalRuntime::hasComma)
+                .count();
+        if (affected == 0) {
+            return tokens;
+        }
+        Path file = Launch.workDir(launch.reactor().app().dir())
+                .resolve(plugin.name() + "-args.txt");
+        List<String> reduced = withCommasInArgFile(tokens, file);
+        // The path travels in the same whitespace-separated value as the rest,
+        // so a space in it breaks exactly as a space in any other flag does.
+        unsplittable(List.of("@" + file), splitter(plugin)).forEach(log::line);
+        log.line(affected + " flag(s) with a comma in them go to " + file
+                + ", which " + plugin.jvmFlagsProperty()
+                + " cannot carry intact");
+        return reduced;
+    }
+
+    /**
+     * The same flags, with the comma-bearing ones moved into an argument file.
+     *
+     * @param tokens
+     *            the flags as they would have been passed inline
+     * @param file
+     *            the argument file to write, if any flag needs one
+     * @return the flags to pass inline, with one {@code @file} token at the end
+     *         when the file was written
+     * @throws IOException
+     *             if the argument file cannot be written
+     */
+    static List<String> withCommasInArgFile(List<String> tokens, Path file)
+            throws IOException {
+        List<String> inline = new ArrayList<>();
+        List<String> quoted = new ArrayList<>();
+        for (String token : tokens) {
+            (hasComma(token) ? quoted : inline).add(token);
+        }
+        if (quoted.isEmpty()) {
+            return inline;
+        }
+        AppProcess.writeArgFile(file, quoted);
+        inline.add("@" + file);
+        return inline;
+    }
+
+    private static boolean hasComma(String flag) {
+        return flag.indexOf(',') >= 0;
+    }
+
+    /**
+     * What the {@code -D} carrying the flags is called on Maven's command line.
+     *
+     * @return the plugin's own user property, or the setting that asks the
+     *         build extension for a project property of that name
+     */
+    private String flagsSetting() {
+        return plugin.projectPropertyFlags()
+                ? (DevLoopBuildExtension.PROPERTY_PREFIX
+                        + plugin.jvmFlagsProperty())
+                : plugin.jvmFlagsProperty();
+    }
+
+    /**
+     * Doubles every backslash, for a plugin that unescapes what it is given.
+     * <p>
+     * A no-op anywhere a path has no backslashes in it, which is everywhere but
+     * Windows - and on Windows it is the difference between the agent jar being
+     * found and the JVM refusing to start. See {@code ServerPlugin}'s TomEE
+     * entry for the parser this answers.
+     *
+     * @param flag
+     *            one flag
+     * @return the flag with its backslashes doubled
+     */
+    private static String escapeBackslashes(String flag) {
+        return flag.replace("\\", "\\\\");
+    }
+
+    /**
+     * Folds a module option and its value into the one token {@code --x=y}.
+     * <p>
+     * A JVM takes {@code --add-opens java.base/java.io=ALL-UNNAMED} as two
+     * arguments or as one with an {@code =} between them, and for
+     * {@code MAVEN_OPTS} either does. Not so for a forked server: WildFly sorts
+     * what it is handed into module options and the rest before building the
+     * command line, and two-token options come apart in the sorting. Measured,
+     * seven {@code --add-opens} arrived in a row ahead of their seven values
+     * and the server JVM refused to start at all -
+     * {@code Error: --add-opens requires modules to be specified}.
+     * <p>
+     * The {@code =} form cannot be separated from its value by anything that
+     * reorders whole tokens, which is why WildFly writes its own module options
+     * that way too.
+     *
+     * @param flags
+     *            the flags, as a JVM command line would take them
+     * @return the same flags, with every module option in one token
+     */
+    static List<String> singleToken(List<String> flags) {
+        List<String> folded = new ArrayList<>();
+        Iterator<String> remaining = flags.iterator();
+        while (remaining.hasNext()) {
+            String flag = remaining.next();
+            boolean wantsValue = flag.startsWith("--add-")
+                    && flag.indexOf('=') < 0 && remaining.hasNext();
+            folded.add(wantsValue ? (flag + "=" + remaining.next()) : flag);
+        }
+        return folded;
     }
 
     /**
@@ -160,14 +548,22 @@ final class MavenGoalRuntime implements AppRuntime {
         Path classes = project.app().classesDir();
         try {
             Files.createDirectories(classes);
+            // extraClasspath only for an embedded server. It is what the two
+            // --add-opens in extraJvmFlags pay for, and those do not go to a
+            // forked server; writing it anyway would ask HotswapAgent for a
+            // swap it has not been given the access to make, and log a failure
+            // for it on every start.
+            String extraClasspath = plugin.embedded()
+                    ? ("extraClasspath=" + launch.ensureHotswapAgent().toUri()
+                            + System.lineSeparator())
+                    : "";
             Files.writeString(classes.resolve("hotswap-agent.properties"),
                     "# Written by the Vaadin dev loop; see MavenGoalRuntime."
                             + System.lineSeparator()
                             + "# Only read when HotswapAgent is on the JVM, so"
                             + " it does nothing in a normal build."
-                            + System.lineSeparator() + "extraClasspath="
-                            + launch.ensureHotswapAgent().toUri()
-                            + System.lineSeparator() + "disabledPlugins="
+                            + System.lineSeparator() + extraClasspath
+                            + "disabledPlugins="
                             + Launch.DISABLED_HOTSWAP_PLUGINS
                             + System.lineSeparator());
         } catch (IOException e) {
@@ -193,23 +589,55 @@ final class MavenGoalRuntime implements AppRuntime {
      * {@link com.vaadin.flow.devloop.mavenext.DevLoopBuildExtension} edit the
      * effective model in memory instead. Nothing is written to the project.
      * <p>
+     * The application's own module is named alongside the plugin, because the
+     * effective model the extension edits is the one Maven resolved: a plugin a
+     * reactor parent declares belongs to every module that inherits it, and an
+     * entry the loop switches off across the reactor - Cargo, WildFly, both
+     * Payaras - would be switched straight back on in the reactor root by the
+     * very {@code <skip>false</skip>} that is meant for the application alone.
+     * It is the same {@code artifactId} the {@code -pl :<app>} above selects.
+     * <p>
+     * For an entry that is <em>bound</em> rather than named, this is not a
+     * rewrite but the launch itself:
+     * {@link DevLoopBuildExtension#BIND_PROPERTY} is what puts the goal in the
+     * application module's model, and without it there is no goal in the build
+     * at all. That is why {@link #invocation} refuses such a launch in a
+     * reactor rather than warning about it.
+     * <p>
      * Empty when the daemon is running from an exploded build directory rather
      * than a jar, which is the one case there is nothing to point Maven at; the
      * warnings then stand as the fallback.
      */
     private List<String> configurationOverride() {
-        return launch.agentJar().filter(Files::isRegularFile)
-                .map(jar -> List.of("-Dmaven.ext.class.path=" + jar,
-                        "-D" + DevLoopBuildExtension.PLUGIN_PROPERTY + "="
-                                + plugin.groupId() + ":" + plugin.artifactId(),
-                        "-D" + DevLoopBuildExtension.FORCE_PROPERTY + "="
-                                + plugin.forcedConfiguration()))
-                .orElseGet(List::of);
+        return launch.agentJar().filter(Files::isRegularFile).map(jar -> {
+            List<String> settings = new ArrayList<>(List.of(
+                    "-Dmaven.ext.class.path=" + jar,
+                    "-D" + DevLoopBuildExtension.PLUGIN_PROPERTY + "="
+                            + plugin.groupId() + ":" + plugin.artifactId(),
+                    "-D" + DevLoopBuildExtension.MODULE_PROPERTY + "="
+                            + launch.reactor().app().artifactId(),
+                    "-D" + DevLoopBuildExtension.FORCE_PROPERTY + "="
+                            + plugin.forcedConfiguration()));
+            if (plugin.boundInTheApplication()) {
+                // The phase the command line names anyway, so the goal runs
+                // immediately after the WAR it deploys has been packaged. An
+                // entry that is bound always names one; one that named none
+                // would have nothing to deploy either.
+                settings.add("-D" + DevLoopBuildExtension.BIND_PROPERTY + "="
+                        + plugin.phase() + ":" + plugin.goal());
+            }
+            return List.copyOf(settings);
+        }).orElseGet(List::of);
     }
 
     @Override
     public boolean serving(String line) {
         return plugin.serving().matcher(line).find();
+    }
+
+    @Override
+    public boolean deployed(String line) {
+        return plugin.deployed().matcher(line).find();
     }
 
     @Override
@@ -226,6 +654,24 @@ final class MavenGoalRuntime implements AppRuntime {
     }
 
     /**
+     * Those warnings, after the ones about a flag the channel would break.
+     * <p>
+     * Which channel that is depends on the plugin: an embedded server runs in
+     * Maven's own JVM and takes them from {@code MAVEN_OPTS}, while a forked
+     * one takes them from the plugin parameter {@link #forkedJvmFlags} packs
+     * them into. Naming the wrong one sends a reader looking in a variable that
+     * has nothing to do with the failure.
+     */
+    @Override
+    public List<String> warnings(List<String> jvmFlags) {
+        List<String> all = new ArrayList<>(
+                plugin.embedded() ? unsplittable(jvmFlags)
+                        : unsplittable(jvmFlags, splitter(plugin)));
+        all.addAll(warnings());
+        return all;
+    }
+
+    /**
      * What this project configures that the dev loop needs but, in this one
      * case, cannot override.
      * <p>
@@ -235,29 +681,83 @@ final class MavenGoalRuntime implements AppRuntime {
      * to point Maven at, though, and a daemon running from an exploded build
      * directory has none - so that is the case this warns about, rather than
      * asking every project to change its pom.
+     * <p>
+     * For a plugin whose JVM flags travel as a project property that jar is not
+     * a nicety but the whole channel: without it the agents never reach the
+     * server at all, and the loop would run as a build-and-restart loop without
+     * saying why. That one is first, because it is the one that stops the loop
+     * working rather than merely competing with it.
      */
     @Override
     public List<String> warnings() {
-        if (!configurationOverride().isEmpty()) {
-            return List.of();
-        }
+        boolean rewritten = !configurationOverride().isEmpty();
         List<String> warnings = new ArrayList<>();
+        if (plugin.projectPropertyFlags() && !rewritten) {
+            warnings.add(WARNING + plugin.artifactId() + " takes the JVM "
+                    + "flags for the server it starts from the Maven project "
+                    + "property " + plugin.jvmFlagsProperty() + ", which no "
+                    + "command line can set - only the dev loop's build "
+                    + "extension can, and this daemon is not running from a "
+                    + "jar so it has none. The agents the loop needs will be "
+                    + "dropped, and every apply will restart instead of hot "
+                    + "reloading. Please run the daemon from its jar.");
+        } else if (plugin.skippedOutsideTheApplication() && !rewritten) {
+            // Only when the warning above has not already said it: that one
+            // ends in the same instruction, and a second copy of it would be
+            // noise rather than news.
+            warnings.add("WARNING: a goal named on a Maven command line runs "
+                    + "on every module in the reactor, and " + plugin.goal()
+                    + " has to be switched off for all but the application's "
+                    + "own - which only the dev loop's build extension can do, "
+                    + "and this daemon is not running from a jar so it has "
+                    + "none. The reactor root will start a server of its own "
+                    + "with nothing deployed in it, and the start will time "
+                    + "out. Please run the daemon from its jar.");
+        }
         for (ServerPlugin.Competing competing : plugin.competing()) {
+            // The extension can only force a constant, so an entry that names
+            // no acceptable value is beyond it: those name a parameter the
+            // loop needs for itself, whose value is composed per launch. That
+            // one is worth saying even when the extension is in play.
+            boolean forceable = !competing.acceptable().isEmpty();
             Optional<String> configured = declared
-                    .configured(competing.element());
-            if (configured.isEmpty()
-                    || competing.acceptable().stream().anyMatch(value -> value
-                            .equalsIgnoreCase(configured.get()))) {
+                    .configured(competing.element())
+                    .filter(value -> competing.acceptable().stream()
+                            .noneMatch(value::equalsIgnoreCase));
+            if ((rewritten && forceable) || configured.isEmpty()) {
                 continue;
             }
-            warnings.add("WARNING: " + plugin.artifactId() + " is configured "
+            String why = forceable
+                    ? ("and this daemon is not running from a jar so it "
+                            + "cannot override that for you")
+                    : "which the dev loop needs for itself";
+            warnings.add(WARNING + plugin.artifactId() + " is configured "
                     + "with <" + competing.element() + ">" + configured.get()
-                    + "</" + competing.element() + ">, and this daemon is "
-                    + "not running from a jar so it cannot override that for "
-                    + "you - " + competing.consequence() + ". Please "
-                    + competing.fix() + ".");
+                    + "</" + competing.element() + ">, " + why + " - "
+                    + competing.consequence() + ". Please " + competing.fix()
+                    + ".");
         }
         return warnings;
+    }
+
+    /**
+     * Longer for a forked container, which may have to build a server before it
+     * can start one.
+     * <p>
+     * {@code wildfly:run} provisions a server under {@code target/} the first
+     * time it runs, laying out a few hundred megabytes of modules, and
+     * {@code cargo:run} downloads and unpacks one. Measured against a warm
+     * local repository WildFly's still outran the five minutes an embedded
+     * start is given, and the loop killed a provision that was making progress
+     * - on every first run, since the provision it killed was never finished
+     * either. The window is only ever reached when something is wrong, so
+     * widening it for the case that is legitimately slow costs a failing start
+     * nothing but patience.
+     */
+    @Override
+    public Duration startupTimeout() {
+        return plugin.embedded() ? AppRuntime.super.startupTimeout()
+                : Duration.ofMinutes(20);
     }
 
     /**
@@ -280,12 +780,32 @@ final class MavenGoalRuntime implements AppRuntime {
      * And the two {@code --add-opens}: the price of the {@code extraClasspath}
      * that lets HotswapAgent see itself from the webapp class loader; see
      * {@link #writeHotswapAgentProperties}.
+     * <p>
+     * None of it goes to a forked server, and the opens least of all. They buy
+     * HotswapAgent the right to replace {@code ucp} on every
+     * {@code URLClassLoader} in the JVM, which is worth it where the webapp
+     * loader is one and cannot otherwise see the agent. A container of its own
+     * is neither: the agent is already on that JVM's class path, and JBoss
+     * Modules hands the deployment a {@code ModuleClassLoader} that the swap
+     * could not help in any case. What the swap does reach there is the
+     * server's own loaders - measured against WildFly 38, the transactions
+     * subsystem then failed to read {@code jbossts-properties.xml} out of its
+     * own jar and the boot was unrecoverable, listeners bound and all.
      */
     @Override
     public List<String> extraJvmFlags() {
-        // Unescaped dots: this is a regular expression, and a dot matching any
-        // character rather than only a dot cannot widen it onto anything else.
+        if (!plugin.embedded()) {
+            // Neither of the embedded flags applies to a forked server, and
+            // the opens are actively harmful there; see below.
+            return List.of();
+        }
         return List.of(
+                // Only an embedded server shares its JVM with the build, so
+                // only there is the plugin's own loader present to exclude.
+                //
+                // Unescaped dots: this is a regular expression, and a dot
+                // matching any character rather than only a dot cannot widen
+                // it onto anything else.
                 "-DexcludedClassLoaderPatterns="
                         + "com.vaadin.flow.plugin.maven.Reflector.*",
                 // What HotswapAgent needs in order to honour the
@@ -338,6 +858,23 @@ final class MavenGoalRuntime implements AppRuntime {
     }
 
     /**
+     * The {@code PATH} to launch with: the chosen JVM's {@code bin} first, then
+     * everything the daemon's own environment has, so that a tool the build
+     * runs by name is still found.
+     *
+     * @param jvmBin
+     *            the {@code bin} directory of the JVM the application runs on
+     * @param inherited
+     *            {@code PATH} as the daemon's environment has it, which may be
+     *            {@code null} or blank
+     * @return the value to launch with
+     */
+    static String pathWith(Path jvmBin, String inherited) {
+        return (inherited == null || inherited.isBlank()) ? jvmBin.toString()
+                : jvmBin + File.pathSeparator + inherited;
+    }
+
+    /**
      * Whether a JVM flag can survive the trip through {@code MAVEN_OPTS}.
      * <p>
      * Maven's launcher expands {@code $MAVEN_OPTS} unquoted, so the shell
@@ -351,11 +888,28 @@ final class MavenGoalRuntime implements AppRuntime {
      * @return one warning per flag that cannot survive, empty when all can
      */
     static List<String> unsplittable(List<String> flags) {
+        return unsplittable(flags, "Maven splits MAVEN_OPTS on whitespace");
+    }
+
+    /**
+     * The same, for a channel that is not {@code MAVEN_OPTS}.
+     * <p>
+     * A forked server is handed its JVM flags in one whitespace-separated
+     * value, so the same space breaks the same way - but naming MAVEN_OPTS as
+     * the splitter would send a reader looking in the wrong place.
+     *
+     * @param flags
+     *            the values to check
+     * @param splitter
+     *            what splits them, as a clause reading "and ..."
+     * @return one warning per value that cannot survive the trip
+     */
+    static List<String> unsplittable(List<String> flags, String splitter) {
         List<String> warnings = new ArrayList<>();
         for (String flag : flags) {
             if (flag.chars().anyMatch(Character::isWhitespace)) {
-                warnings.add("WARNING: " + flag + " contains a space, and "
-                        + "Maven splits MAVEN_OPTS on whitespace, so the "
+                warnings.add(WARNING + flag + " contains a space, and "
+                        + splitter + ", so the "
                         + "application JVM will not receive it intact. Move "
                         + "the file it names to a path without spaces.");
             }
